[tool.poetry]
name = "python-tools"
version = "0.1.0"
description = ""
authors = ["achekery <6503526+achekery@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "python_tools", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
